--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -68,7 +68,7 @@
        <h2>AllergyIntolerance</h2>
       <table>
         <tr>
-          "Allergies:"
+          "Allergie Listing:"
         </td>
         <tr>
           <td id='alg'></td>
