--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id='holder' >
       <h2>Mud Wizard's Example-SMART-App</h2>
-	  <img src="./src/images/mudwizard.jpg" alt="Mud Wizard" width="54" height="91" >
+	  <img src="./src/images/mudwizard.jpg" alt="Mud Wizard" width="54px" height="91px" >
 
       <h2>Patient Resource</h2>
       <table>
