--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -21,8 +21,13 @@
     </div>
     <div id='holder' >
       <h2>Mud Wizard's Example-SMART-App</h2>
-	  <img src="./src/images/mudwizard.jpg" alt="Mud Wizard" width="54px" height="91px" >
-
+	  <table align="center">
+	  <tr><td>&nbsp;</td>&nbsp;<td>&nbsp;</td>
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;			
+			<img src="./src/images/mudwizard.jpg" alt="Mud Wizard" width="54px" height="91px" >
+		</td>
+		</tr>
+	</table>
       <h2>Patient Resource</h2>
       <table>
         <tr>
