--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -23,7 +23,7 @@
       <h2>Mud Wizard's Example-SMART-App</h2>
 	  <table align="center">
 	  <tr><td>&nbsp;</td>&nbsp;<td>&nbsp;</td>
-		<td>&nbsp;&nbsp;&nbsp;&nbsp;			
+		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;			
 			<img src="./src/images/mudwizard.jpg" alt="Mud Wizard" width="54px" height="91px" >
 		</td>
 		</tr>
